# Dandelion

./: .env  .gitignore  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/app/: Cargo.toml  tauri.conf.json
src-tauri/src/app/src/: lib.rs
src-tauri/src/mcp/: Cargo.toml
src-tauri/src/mcp/examples/: test_mcp.rs
src-tauri/src/mcp/src/: lib.rs  server.rs  transport.rs  types.rs
src/components/common/: system-logo.vue
src/layouts/modules/global-footer/: index.vue
src/locales/langs/: en-us.ts  zh-cn.ts
src/plugins/: loading.ts
src/router/elegant/: imports.ts  routes.ts  transform.ts
src/store/modules/auth/: index.ts
src/theme/: settings.ts
src/typings/: app.d.ts  elegant-router.d.ts
src/views/control/: index.vue
src/views/home/: index.vue
