[package]
name = "app"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
mcp.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
