[package]
name = "mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rmcp = { version = "0.14", features = [
    "server",
    "macros",
    "client",
    "transport-io",
    "transport-streamable-http-server",
    "auth",
    "elicitation",
    "schemars",
] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
schemars = "0.8"
axum = "0.8"
tower = "0.5"